# Ensemble-Empirical-Mode-Decomposition-MKL

./: .gitignore  CMakeLists.txt  README.md  eemd_bench.cpp  eemd_debug.cpp  eemd_mkl.hpp  eemd_mkl_14900kf.hpp  eemd_test.cpp  iceemdan_accuracy_test.cpp  iceemdan_bench.cpp  iceemdan_mkl.hpp
jupyter/: garch_diagnostics.csv  garch_imf_stats.csv  garch_imfs.csv  garch_signal.csv  multiscale_diagnostics.csv  multiscale_imf_stats.csv  multiscale_imfs.csv  multiscale_signal.csv  regime_diagnostics.csv  regime_imf_stats.csv  regime_imfs.csv  regime_signal.csv
python/: demo_finance.ipynb
test/: bench_snumber.cpp  eemd_test.cpp
